--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "chokidar": "^3.5.0",
+    "find-config": "^1.0.0",
     "lodash.throttle": "^4.1.1",
     "yaml": "^1.0.0",
     "yargs": "^13.3.0"
